// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AppShell visual regression > matches the shell snapshot in dark theme 1`] = `
<div>
  <div
    class="MuiBox-root css-ogmp5q"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ra1c3-MuiTypography-root-MuiLink-root"
      data-testid="skip-to-content"
      href="#main-content"
    >
      Skip to main content
    </a>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorInherit MuiAppBar-positionFixed mui-fixed css-eptzcz-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: var(--mui-shadows-0); --Paper-overlay: var(--mui-overlays-0);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      >
        <a
          aria-label="kbeatz"
          class="MuiBox-root css-5k1n1y"
          data-discover="true"
          href="/"
        >
          <picture>
            <source
              media="(prefers-color-scheme: dark)"
              srcset="/src/assets/kbeatz-logo-dark.svg"
            />
            <img
              alt=""
              class="MuiBox-root css-1n45nsz"
              src="/src/assets/kbeatz-logo-transparent.svg"
            />
          </picture>
        </a>
        <button
          aria-controls="app-mobile-drawer"
          aria-expanded="false"
          aria-label="Open navigation menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-k7b2b2-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <button
          aria-label="Switch to light theme"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-1g3oe0e-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="LightModeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 7c-2.76 0-5 2.24-5 5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5M2 13h2c.55 0 1-.45 1-1s-.45-1-1-1H2c-.55 0-1 .45-1 1s.45 1 1 1m18 0h2c.55 0 1-.45 1-1s-.45-1-1-1h-2c-.55 0-1 .45-1 1s.45 1 1 1M11 2v2c0 .55.45 1 1 1s1-.45 1-1V2c0-.55-.45-1-1-1s-1 .45-1 1m0 18v2c0 .55.45 1 1 1s1-.45 1-1v-2c0-.55-.45-1-1-1s-1 .45-1 1M5.99 4.58c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0s.39-1.03 0-1.41zm12.37 12.37c-.39-.39-1.03-.39-1.41 0-.39.39-.39 1.03 0 1.41l1.06 1.06c.39.39 1.03.39 1.41 0 .39-.39.39-1.03 0-1.41zm1.06-10.96c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0zM7.05 18.36c.39-.39.39-1.03 0-1.41-.39-.39-1.03-.39-1.41 0l-1.06 1.06c-.39.39-.39 1.03 0 1.41s1.03.39 1.41 0z"
            />
          </svg>
        </button>
        <div
          aria-label="Select language"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-2482nm-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-label="English"
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="en"
          >
            EN
          </button>
          <button
            aria-label="Deutsch"
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="de"
          >
            DE
          </button>
        </div>
      </div>
    </header>
    <nav
      aria-label="Primary navigation"
      class="MuiBox-root css-1at9qkq"
    >
      <div
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-docked css-17h82c3-MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper css-oc2eyy-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: var(--mui-shadows-0); --Paper-overlay: var(--mui-overlays-0);"
        >
          <div
            class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
          />
          <ul
            class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-gutters css-19f6boz-MuiListItem-root"
            >
              <a
                aria-current="page"
                class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters css-1donwgn-MuiButtonBase-root-MuiListItemButton-root active"
                data-discover="true"
                href="/"
                tabindex="0"
              >
                <div
                  class="MuiListItemIcon-root css-1is484l-MuiListItemIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
                    data-testid="LibraryMusicIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m-2 5h-3v5.5c0 1.38-1.12 2.5-2.5 2.5S10 13.88 10 12.5s1.12-2.5 2.5-2.5c.57 0 1.08.19 1.5.51V5h4zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1fz3vqa-MuiTypography-root"
                  >
                    Albums
                  </span>
                </div>
              </a>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters css-19f6boz-MuiListItem-root"
            >
              <a
                class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters css-1donwgn-MuiButtonBase-root-MuiListItemButton-root"
                data-discover="true"
                href="/library"
                tabindex="0"
              >
                <div
                  class="MuiListItemIcon-root css-1is484l-MuiListItemIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
                    data-testid="StorageIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2 20h20v-4H2zm2-3h2v2H4zM2 4v4h20V4zm4 3H4V5h2zm-4 7h20v-4H2zm2-3h2v2H4z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1fz3vqa-MuiTypography-root"
                  >
                    Library
                  </span>
                </div>
              </a>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters css-19f6boz-MuiListItem-root"
            >
              <a
                class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters css-1donwgn-MuiButtonBase-root-MuiListItemButton-root"
                data-discover="true"
                href="/settings"
                tabindex="0"
              >
                <div
                  class="MuiListItemIcon-root css-1is484l-MuiListItemIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
                    data-testid="SettingsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
                    />
                  </svg>
                </div>
                <div
                  class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1fz3vqa-MuiTypography-root"
                  >
                    Settings
                  </span>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="MuiBox-root css-1pecbk"
      id="main-content"
      tabindex="-1"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      />
      <div
        data-testid="scan-progress"
      />
      <div
        data-testid="route-content"
      >
        Content
      </div>
    </main>
  </div>
</div>
`;

exports[`AppShell visual regression > matches the shell snapshot in light theme 1`] = `
<div>
  <div
    class="MuiBox-root css-ogmp5q"
  >
    <a
      class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ra1c3-MuiTypography-root-MuiLink-root"
      data-testid="skip-to-content"
      href="#main-content"
    >
      Skip to main content
    </a>
    <header
      class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiAppBar-root MuiAppBar-colorInherit MuiAppBar-positionFixed mui-fixed css-eptzcz-MuiPaper-root-MuiAppBar-root"
      style="--Paper-shadow: var(--mui-shadows-0); --Paper-overlay: var(--mui-overlays-0);"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      >
        <a
          aria-label="kbeatz"
          class="MuiBox-root css-5k1n1y"
          data-discover="true"
          href="/"
        >
          <picture>
            <source
              media="(prefers-color-scheme: dark)"
              srcset="/src/assets/kbeatz-logo-dark.svg"
            />
            <img
              alt=""
              class="MuiBox-root css-1n45nsz"
              src="/src/assets/kbeatz-logo-transparent.svg"
            />
          </picture>
        </a>
        <button
          aria-controls="app-mobile-drawer"
          aria-expanded="false"
          aria-label="Open navigation menu"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-k7b2b2-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="MenuIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M3 18h18v-2H3zm0-5h18v-2H3zm0-7v2h18V6z"
            />
          </svg>
        </button>
        <div
          class="MuiBox-root css-i9gxme"
        />
        <button
          aria-label="Switch to dark theme"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-colorInherit MuiIconButton-sizeLarge css-1g3oe0e-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
            data-testid="DarkModeIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M12 3c-4.97 0-9 4.03-9 9s4.03 9 9 9 9-4.03 9-9c0-.46-.04-.92-.1-1.36-.98 1.37-2.58 2.26-4.4 2.26-2.98 0-5.4-2.42-5.4-5.4 0-1.81.89-3.42 2.26-4.4-.44-.06-.9-.1-1.36-.1"
            />
          </svg>
        </button>
        <div
          aria-label="Select language"
          class="MuiToggleButtonGroup-root MuiToggleButtonGroup-horizontal css-2482nm-MuiToggleButtonGroup-root"
          role="group"
        >
          <button
            aria-label="English"
            aria-pressed="true"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root Mui-selected MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-firstButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="en"
          >
            EN
          </button>
          <button
            aria-label="Deutsch"
            aria-pressed="false"
            class="MuiButtonBase-root MuiToggleButtonGroup-grouped MuiToggleButton-root MuiToggleButton-sizeSmall MuiToggleButton-primary MuiToggleButtonGroup-grouped MuiToggleButtonGroup-lastButton css-1xvn2m9-MuiButtonBase-root-MuiToggleButton-root"
            tabindex="0"
            type="button"
            value="de"
          >
            DE
          </button>
        </div>
      </div>
    </header>
    <nav
      aria-label="Primary navigation"
      class="MuiBox-root css-1at9qkq"
    >
      <div
        class="MuiDrawer-root MuiDrawer-anchorLeft MuiDrawer-docked css-17h82c3-MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiDrawer-paper css-oc2eyy-MuiPaper-root-MuiDrawer-paper"
          style="--Paper-shadow: var(--mui-shadows-0); --Paper-overlay: var(--mui-overlays-0);"
        >
          <div
            class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
          />
          <ul
            class="MuiList-root MuiList-padding css-b7dj7n-MuiList-root"
          >
            <li
              class="MuiListItem-root MuiListItem-gutters css-19f6boz-MuiListItem-root"
            >
              <a
                aria-current="page"
                class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters css-1donwgn-MuiButtonBase-root-MuiListItemButton-root active"
                data-discover="true"
                href="/"
                tabindex="0"
              >
                <div
                  class="MuiListItemIcon-root css-1is484l-MuiListItemIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
                    data-testid="LibraryMusicIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M20 2H8c-1.1 0-2 .9-2 2v12c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V4c0-1.1-.9-2-2-2m-2 5h-3v5.5c0 1.38-1.12 2.5-2.5 2.5S10 13.88 10 12.5s1.12-2.5 2.5-2.5c.57 0 1.08.19 1.5.51V5h4zM4 6H2v14c0 1.1.9 2 2 2h14v-2H4z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1fz3vqa-MuiTypography-root"
                  >
                    Albums
                  </span>
                </div>
              </a>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters css-19f6boz-MuiListItem-root"
            >
              <a
                class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters css-1donwgn-MuiButtonBase-root-MuiListItemButton-root"
                data-discover="true"
                href="/library"
                tabindex="0"
              >
                <div
                  class="MuiListItemIcon-root css-1is484l-MuiListItemIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
                    data-testid="StorageIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M2 20h20v-4H2zm2-3h2v2H4zM2 4v4h20V4zm4 3H4V5h2zm-4 7h20v-4H2zm2-3h2v2H4z"
                    />
                  </svg>
                </div>
                <div
                  class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1fz3vqa-MuiTypography-root"
                  >
                    Library
                  </span>
                </div>
              </a>
            </li>
            <li
              class="MuiListItem-root MuiListItem-gutters css-19f6boz-MuiListItem-root"
            >
              <a
                class="MuiButtonBase-root MuiListItemButton-root MuiListItemButton-gutters css-1donwgn-MuiButtonBase-root-MuiListItemButton-root"
                data-discover="true"
                href="/settings"
                tabindex="0"
              >
                <div
                  class="MuiListItemIcon-root css-1is484l-MuiListItemIcon-root"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-4uxqju-MuiSvgIcon-root"
                    data-testid="SettingsIcon"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M19.14 12.94c.04-.3.06-.61.06-.94 0-.32-.02-.64-.07-.94l2.03-1.58c.18-.14.23-.41.12-.61l-1.92-3.32c-.12-.22-.37-.29-.59-.22l-2.39.96c-.5-.38-1.03-.7-1.62-.94l-.36-2.54c-.04-.24-.24-.41-.48-.41h-3.84c-.24 0-.43.17-.47.41l-.36 2.54c-.59.24-1.13.57-1.62.94l-2.39-.96c-.22-.08-.47 0-.59.22L2.74 8.87c-.12.21-.08.47.12.61l2.03 1.58c-.05.3-.09.63-.09.94s.02.64.07.94l-2.03 1.58c-.18.14-.23.41-.12.61l1.92 3.32c.12.22.37.29.59.22l2.39-.96c.5.38 1.03.7 1.62.94l.36 2.54c.05.24.24.41.48.41h3.84c.24 0 .44-.17.47-.41l.36-2.54c.59-.24 1.13-.56 1.62-.94l2.39.96c.22.08.47 0 .59-.22l1.92-3.32c.12-.22.07-.47-.12-.61zM12 15.6c-1.98 0-3.6-1.62-3.6-3.6s1.62-3.6 3.6-3.6 3.6 1.62 3.6 3.6-1.62 3.6-3.6 3.6"
                    />
                  </svg>
                </div>
                <div
                  class="MuiListItemText-root css-cfq8qh-MuiListItemText-root"
                >
                  <span
                    class="MuiTypography-root MuiTypography-body1 MuiListItemText-primary css-1fz3vqa-MuiTypography-root"
                  >
                    Settings
                  </span>
                </div>
              </a>
            </li>
          </ul>
        </div>
      </div>
    </nav>
    <main
      class="MuiBox-root css-1pecbk"
      id="main-content"
      tabindex="-1"
    >
      <div
        class="MuiToolbar-root MuiToolbar-gutters MuiToolbar-regular css-1bmc26r-MuiToolbar-root"
      />
      <div
        data-testid="scan-progress"
      />
      <div
        data-testid="route-content"
      >
        Content
      </div>
    </main>
  </div>
</div>
`;
